# ITMO-mobileCV

./: .gitignore  README.md
lab1/: __init__.py  __main__.py  var1.py
lab2/: .gitignore  CMakeLists.txt  Makefile  var1.cc
lab3/: .gitignore  lab3.py
lab4/: .gitignore  lab4.py
